GamePlayerData - switch to using player lists - UUIDs were driving me nuts